--- a/environment.yml
+++ b/environment.yml
@@ -1,78 +1,65 @@
-name: discretion
+name: base
 channels:
   - pytorch
   - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=0_gnu
-  - binutils_impl_linux-64=2.34=h53a641e_2
+  - _libgcc_mutex=0.1=main
   - blas=1.0=mkl
   - ca-certificates=2020.4.5.1=hecc5488_0
   - certifi=2020.4.5.1=py37hc8dfbb8_0
+  - cffi=1.14.0=py37h2e261b9_0
+  - chardet=3.0.4=py37_1003
+  - conda=4.8.3=py37hc8dfbb8_1
+  - conda-package-handling=1.6.1=py37h7b6447c_0
+  - cryptography=2.9.2=py37h1ba5d50_0
   - faiss-cpu=1.6.3=py37h6bb024c_0
-  - gcc_impl_linux-64=7.5.0=hd420e75_6
-  - gfortran_impl_linux-64=7.5.0=hdf63c60_6
-  - gxx_impl_linux-64=7.5.0=hdf63c60_6
+  - idna=2.9=py_1
   - intel-openmp=2020.1=217
-  - ld_impl_linux-64=2.34=h53a641e_2
-  - libffi=3.2.1=he1b5a44_1007
-  - libgcc-ng=9.2.0=h24d8f2e_2
+  - ld_impl_linux-64=2.33.1=h53a641e_7
+  - libedit=3.1.20181209=hc058e9b_0
+  - libffi=3.2.1=hd88cf55_4
+  - libgcc-ng=9.1.0=hdf63c60_0
   - libgfortran-ng=7.5.0=hdf63c60_6
-  - libgomp=9.2.0=h24d8f2e_2
-  - libstdcxx-ng=9.2.0=hdf63c60_2
+  - libstdcxx-ng=9.1.0=hdf63c60_0
   - mkl=2020.1=217
   - mkl-service=2.3.0=py37he904b0f_0
   - mkl_fft=1.0.15=py37ha843d7b_0
   - mkl_random=1.1.1=py37h0da4684_0
-  - ncurses=6.1=hf484d3e_1002
+  - ncurses=6.2=he6710b0_1
   - numpy=1.18.1=py37h4f9e942_0
   - numpy-base=1.18.1=py37hde5b4d6_1
   - openssl=1.1.1g=h516909a_0
-  - pip=20.1.1=pyh9f0ad1d_0
-  - python=3.7.6=h8356626_5_cpython
+  - pip=20.0.2=py37_3
+  - pycosat=0.6.3=py37h7b6447c_0
+  - pycparser=2.20=py_0
+  - pyopenssl=19.1.0=py37_0
+  - pysocks=1.7.1=py37_0
+  - python=3.7.6=h0371630_2
   - python_abi=3.7=1_cp37m
-  - readline=8.0=hf8c457e_0
-  - setuptools=46.4.0=py37hc8dfbb8_0
-  - six=1.15.0=pyh9f0ad1d_0
-  - sqlite=3.30.1=hcee41ef_0
-  - sysroot_linux-64=2.12=h3a0023d_3
-  - tk=8.6.10=hed695b0_0
-  - wheel=0.34.2=py_1
-  - xz=5.2.5=h516909a_0
-  - zlib=1.2.11=h516909a_1006
+  - readline=7.0=h7b6447c_5
+  - requests=2.23.0=py37_0
+  - ruamel_yaml=0.15.87=py37h7b6447c_0
+  - setuptools=46.4.0=py37_0
+  - six=1.14.0=py37_0
+  - sqlite=3.31.1=h62c20be_1
+  - tk=8.6.8=hbc83047_0
+  - tqdm=4.46.0=py_0
+  - urllib3=1.25.8=py37_0
+  - wheel=0.34.2=py37_0
+  - xz=5.2.5=h7b6447c_0
+  - yaml=0.1.7=had09818_2
+  - zlib=1.2.11=h7b6447c_3
   - pip:
-    - blis==0.4.1
-    - cachetools==4.1.0
-    - catalogue==1.0.0
-    - chardet==3.0.4
-    - confuse==1.1.0
-    - cymem==2.0.3
-    - en-core-web-sm==2.2.5
-    - google-auth==1.15.0
-    - google-auth-oauthlib==0.4.1
-    - gspread==3.6.0
-    - idna==2.9
-    - importlib-metadata==1.6.0
-    - murmurhash==1.0.2
-    - oauthlib==3.1.0
-    - pandas==1.0.3
-    - plac==1.1.3
-    - preshed==3.0.2
-    - pyasn1==0.4.8
-    - pyasn1-modules==0.2.8
-    - python-dateutil==2.8.1
-    - pytz==2020.1
-    - pyyaml==5.3.1
-    - requests==2.23.0
-    - requests-oauthlib==1.3.0
-    - rsa==4.0
-    - spacy==2.2.4
-    - srsly==1.0.2
-    - thinc==7.4.0
-    - tqdm==4.46.0
-    - urllib3==1.25.9
-    - wasabi==0.6.0
-    - zipp==3.1.0
-prefix: /home/rick/miniconda3/envs/discretion
+    - astroid==2.4.1
+    - autopep8==1.5.2
+    - isort==4.3.21
+    - lazy-object-proxy==1.4.3
+    - mccabe==0.6.1
+    - pycodestyle==2.6.0
+    - pylint==2.5.2
+    - toml==0.10.1
+    - typed-ast==1.4.1
+    - wrapt==1.12.1
+prefix: /home/rick/miniconda3
 
