--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 addict==2.2.1
 asn1crypto==0.24.0
+astroid==2.4.1
 beautifulsoup4==4.8.2
 Brlapi==0.6.6
 certifi==2018.1.18
 chardet==3.0.4
 command-not-found==0.3
+confuse==1.1.0
 cryptography==2.1.4
 cycler==0.10.0
 defer==1.0.6
@@ -12,14 +14,17 @@ distro==1.0.1
 evdev==0.7.0
 httplib2==0.9.2
 idna==2.6
+isort==4.3.21
 keyring==10.6.0
 keyrings.alt==3.0
 kiwisolver==1.2.0
 language-selector==0.1
+lazy-object-proxy==1.4.3
 louis==3.5.0
 lutris==0.5.6
 lxml==4.4.2
 matplotlib==3.2.1
+mccabe==0.6.1
 netifaces==0.10.4
 numpy==1.18.4
 olefile==0.45.1
@@ -29,22 +34,26 @@ Pillow==5.1.0
 pycairo==1.16.2
 pycrypto==2.6.1
 pygobject==3.26.1
+pylint==2.5.2
 pyparsing==2.4.7
 python-apt===1.6.5-ubuntu0.2-elementary14-ubuntu5.1.1
 python-dateutil==2.8.1
 pyudev==0.21.0
 pyxdg==0.25
-PyYAML==3.12
+PyYAML==5.3.1
 reportlab==3.4.0
 requests==2.18.4
 requests-unixsocket==0.1.5
 scipy==1.4.1
 SecretStorage==2.3.1
 setproctitle==1.1.10
-six==1.14.0
+six==1.15.0
 soupsieve==1.9.5
+toml==0.10.1
+typed-ast==1.4.1
 ubuntu-drivers-common==0.0.0
 ufw==0.36
 urllib3==1.22
 virtualenv==15.1.0
+wrapt==1.12.1
 xkit==0.0.0
