--- a/requirements.txt
+++ b/requirements.txt
@@ -1,59 +1,88 @@
 addict==2.2.1
 asn1crypto==0.24.0
 astroid==2.4.1
+autopep8==1.5.2
 beautifulsoup4==4.8.2
-Brlapi==0.6.6
+blis==0.4.1
+cachetools==4.1.0
+catalogue==1.0.0
 certifi==2018.1.18
+cffi==1.14.0
 chardet==3.0.4
-command-not-found==0.3
+conda==4.8.3
+conda-package-handling==1.7.0
 confuse==1.1.0
 cryptography==2.1.4
 cycler==0.10.0
-defer==1.0.6
+cymem==2.0.3
 distro==1.0.1
+en-core-web-sm==2.2.5
 evdev==0.7.0
+faiss==1.6.3
+google-auth==1.16.0
+google-auth-oauthlib==0.4.1
+gspread==3.6.0
 httplib2==0.9.2
 idna==2.6
+importlib-metadata==1.6.0
 isort==4.3.21
+jeepney==0.4.3
 keyring==10.6.0
 keyrings.alt==3.0
 kiwisolver==1.2.0
-language-selector==0.1
 lazy-object-proxy==1.4.3
-louis==3.5.0
-lutris==0.5.6
 lxml==4.4.2
 matplotlib==3.2.1
 mccabe==0.6.1
+mkl-fft==1.0.15
+mkl-random==1.1.1
+mkl-service==2.3.0
+murmurhash==1.0.2
 netifaces==0.10.4
 numpy==1.18.4
+oauthlib==3.1.0
 olefile==0.45.1
-onboard==1.4.1
+pandas==1.0.4
 pexpect==4.2.1
 Pillow==5.1.0
+plac==1.1.3
+preshed==3.0.2
+ptyprocess==0.6.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycairo==1.16.2
+pycodestyle==2.6.0
+pycosat==0.6.3
+pycparser==2.20
 pycrypto==2.6.1
-pygobject==3.26.1
 pylint==2.5.2
+pyOpenSSL==19.1.0
 pyparsing==2.4.7
-python-apt===1.6.5-ubuntu0.2-elementary14-ubuntu5.1.1
+PySocks==1.7.1
 python-dateutil==2.8.1
+pytz==2020.1
 pyudev==0.21.0
 pyxdg==0.25
 PyYAML==5.3.1
 reportlab==3.4.0
 requests==2.18.4
+requests-oauthlib==1.3.0
 requests-unixsocket==0.1.5
+rsa==4.0
+ruamel-yaml==0.15.87
 scipy==1.4.1
 SecretStorage==2.3.1
 setproctitle==1.1.10
 six==1.15.0
 soupsieve==1.9.5
+spacy==2.2.4
+srsly==1.0.2
+thinc==7.4.0
 toml==0.10.1
+tqdm==4.46.0
 typed-ast==1.4.1
-ubuntu-drivers-common==0.0.0
-ufw==0.36
 urllib3==1.22
 virtualenv==15.1.0
+wasabi==0.6.0
 wrapt==1.12.1
-xkit==0.0.0
+zipp==3.1.0
