--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ catalogue==1.0.0
 certifi==2018.1.18
 cffi==1.14.0
 chardet==3.0.4
+click==7.1.2
 conda==4.8.3
 conda-package-handling==1.7.0
 confuse==1.1.0
@@ -19,6 +20,7 @@ distro==1.0.1
 en-core-web-sm==2.2.5
 evdev==0.7.0
 faiss==1.6.3
+Flask==1.1.2
 google-auth==1.16.0
 google-auth-oauthlib==0.4.1
 gspread==3.6.0
@@ -26,12 +28,15 @@ httplib2==0.9.2
 idna==2.6
 importlib-metadata==1.6.0
 isort==4.3.21
+itsdangerous==1.1.0
 jeepney==0.4.3
+Jinja2==2.11.2
 keyring==10.6.0
 keyrings.alt==3.0
 kiwisolver==1.2.0
 lazy-object-proxy==1.4.3
 lxml==4.4.2
+MarkupSafe==1.1.1
 matplotlib==3.2.1
 mccabe==0.6.1
 mkl-fft==1.0.15
@@ -84,5 +89,6 @@ typed-ast==1.4.1
 urllib3==1.22
 virtualenv==15.1.0
 wasabi==0.6.0
+Werkzeug==1.0.1
 wrapt==1.12.1
 zipp==3.1.0
