--- a/requirements.txt
+++ b/requirements.txt
@@ -62,6 +62,7 @@ pycosat==0.6.3
 pycparser==2.20
 pycrypto==2.6.1
 pylint==2.5.2
+pymongo==3.10.1
 pyOpenSSL==19.1.0
 pyparsing==2.4.7
 PySocks==1.7.1
